[DT-2775] Improve Data Submission Error Messaging (#2792)